--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,20 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  
+
+  <link rel="stylesheet" href="assets/commom.css" />
+
+  
+  <style>
+    .container {
+      flex-wrap: wrap;
+    }
+
+    ion-card {
+      flex: 1 1 28%;
+    }
+  </style>
 </head>
 
 <body>
